# gb2040

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gb2040.code-workspace
emulator/: CMakeLists.txt  README.md
emulator/include/core/: apu.h  audio.h  channels.h  console.h  cpu.h  graphics.h  mbc.h  mmu.h  ppu.h  timer.h
emulator/include/platform/: platform.h
emulator/libs/SDL3/: LICENSE.txt
emulator/libs/SDL3/lib/arm64/: SDL3.lib  SDL3_test.lib
emulator/libs/SDL3/lib/x64/: SDL3_test.lib
emulator/src/core/: console.cpp
emulator/src/core/audio/: apu.cpp  noise.cpp  pulse.cpp  wave.cpp
emulator/src/core/cpu/: cpu.cpp
emulator/src/core/cpu/opcodes/: arithmetic.cpp  load.cpp  misc.cpp
emulator/src/core/mbc/: mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  no_mbc.cpp
emulator/src/core/mmu/: io.cpp  mmu.cpp
emulator/src/core/video/: framebuffer.cpp  ppu.cpp
emulator/src/platform/desktop/: platform.cpp
emulator/src/platform/pico/: platform.cpp
include/core/: console.h  mbc.h  mmu.h  timer.h
include/platform/: config.h  platform.h
libs/SDL3/lib/x86/: SDL3_test.lib
src/: main.cpp
src/core/: timer.cpp
src/core/cpu/: cpu.cpp
src/core/cpu/opcodes/: bitwise.cpp  cb.cpp  control.cpp
src/core/mbc/: mbc3.cpp  no_mbc.cpp
src/core/mmu/: io.cpp
src/core/video/: framebuffer.cpp  ppu.cpp
src/platform/pico/: platform.cpp
